# haskell-bazel-nix

./: .bazelrc  .gitignore  .hie-bios  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  clean_rules_haskell.patch  hie.yaml  nixpkgs.nix  shell.nix
.github/workflows/: ci.yml
backend/: BUILD.bazel
backend/package-a/: BUILD.bazel
backend/package-a/src/: Main.hs
backend/package-b/: BUILD.bazel
backend/package-b/src/: Lib2.hs
backend/src/: Main.hs
