load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_toolchain_library",
)

haskell_toolchain_library(name="base")
haskell_toolchain_library(name="effectful")

haskell_binary(
    name = "skeleton",
    srcs = glob(["src/**/*.hs"]),
    src_strip_prefix = "src",
    compiler_flags = [],
    deps = [
        "base",
        "effectful",
    ],
    visibility = [
        "//visibility:public",
    ],
)

load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")
cc_image(
    name = "skeleton_container",
    base = "@haskell-base-image//image",
    binary = ":skeleton",
    # ports = [ "8000/tcp" ],
    creation_time = "{BUILD_TIMESTAMP}",
    stamp = True,
)
