load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_toolchain_library",
)

haskell_toolchain_library(name="base")
# haskell_toolchain_library(name="effectful")

haskell_binary(
    name = "exe",
    srcs = glob(["src/**/*.hs"]),
    # src_strip_prefix = "backend",
    compiler_flags = [],
    features = [ "fully_static_link" ],
    deps = [
        "//backend/package-b:lib",
        "base",
        # "effectful",
    ],
    visibility = [
        "//visibility:public",
    ],
)

load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")
cc_image(
    name = "skeleton_container",
    base = "@haskell-base-image//image",
    binary = ":exe",
    # ports = [ "8000/tcp" ],
    creation_time = "{BUILD_TIMESTAMP}",
    stamp = True,
)
